bug 333315, Can't 'Copy Locations to Clipboard' in bookmarks manager. r=smorgan, sr=pink. Patch by Chris Lawson (bugzilla@chrislawsonet.net)